--- a/style.css
+++ b/style.css
@@ -1,13 +1,65 @@
-body {
-    background-color: black;
+@font-face {
+    font-family: 'Monocraft';
+    src: url('Monocraft.ttf') format('truetype'),
+         url('Monocraft.otf') format('opentype');
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Monocraft';
+}
+
+body{
+    height: 100vh;
+    box-sizing: border-box;
+    background-color: #000000;
     color: #F6F6F6;
 }
 
-h1>strong {
+.titulo-destaque{
     color: powderblue;
-    color: #bb3385;
 }
 
-span {
-    color: powderblue;
+.apresentacao{
+    margin: 10% 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.apresentacao__conteudo{
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+}
+
+.apresentacao__conteudo__texto{
+    font-size: 24px;
+}
+
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link{
+    background-color: powderblue;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+}
+
+img{
+    width: 400px;
+    border-radius: 16px;
 }
