--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ ul>li>a:hover{
 .apresentacao-projetos{
    flex-direction: column;
    gap: 20px;
+   padding: 5%;
 }
 
 .apresentacao-projetos__conteudo{
@@ -185,6 +186,8 @@ ul>li>a:hover{
 .projetos__conteudo__box{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 500px;
     border: solid 2px;
     padding: 1rem;
     gap: 20px;
@@ -196,7 +199,7 @@ ul>li>a:hover{
 }
 
 .box-image>img{
-    width: 300px;
+    width: 100%;
     height: 200px;
 }
 
@@ -243,8 +246,7 @@ ul>li>a:hover{
     }
     
     .apresentacao{
-        flex-direction: column-reverse;
-        padding: 5%;
+        padding: 10%;
     }
 
     .apresentacao__conteudo{
@@ -254,5 +256,14 @@ ul>li>a:hover{
     .apresentacao__imagem {
         position: inherit;
         align-self:inherit;
+    }
+
+    .apresentacao-projetos__conteudo{
+        grid-template-columns: 1fr;
+        font-size: 2rem;
+    }
+
+    .box-buttons a:last-child{
+        width: 100px;
     }
 }
